--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./src/images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./src/css/styles.css">
     <title>Music player</title>
 </head>
 <body>
     <main>
+        <h1>Music Player</h1>
         <section class="entrada">
             <label for="file" id="bntFile">Selecione a música</label>
             <input type="file" name="file" id="file" accept="audio/*">
-            <p id="nomeMusica"></p>
+            <p id="nomeMusica">Nome:</p>
         </section>
         <hr>
         <section class="player">
