refactor: ajusta nome do id da label para btnFile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <h1>Music Player</h1>
         <section class="entrada">
-            <label for="file" id="bntFile">Selecione a música</label>
+            <label for="file" id="btnFile" title="Clique para selecionar um arquivo de áudio">Selecione a música</label>
             <input type="file" name="file" id="file" accept="audio/*">
             <p id="msgMusica" class="desaparece">Formato inválido</p>
             <p id="nomeMusica"></p>
